--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -56,6 +56,7 @@ p {
 }
 
 .btn {
+  width: fit-content;
   background-color: #e0e0e0;
   border: 0;
   border-radius: 0.25rem;
@@ -86,8 +87,11 @@ p {
 }
 
 .search {
+  padding: 10px 10px;
+  width: 100%;
   display: block;
   margin: 0 auto 2rem;
+  border-radius: 10px;
 }
 
 input[type='search'] {
@@ -215,4 +219,16 @@ img {
 
 .max-reached {
   padding: 1rem 0;
+}
+
+.link{
+  color: #1976d2;
+  cursor: pointer;
+}
+
+.flex
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
